--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "6.4.2",
     "bootstrap": "5.3.1",
     "rxjs": "7.8.1",
+    "swa": "^0.1.1",
     "tslib": "2.6.2",
     "zone.js": "0.13.1"
   },
